fixed some of the bugs in the resize directive, by moving the shadow div even further, and adding extra padding on the top and bottom.

--- a/client/css/errataPage.less
+++ b/client/css/errataPage.less
@@ -450,6 +450,9 @@ sp-input,sp-textarea{
 	-webkit-transition: 0.05s;
 	-o-transition: 0.05s;
   }
+  .sp-input.shadow{
+    color: transparent;
+  }
 }
 sp-select{
   height:@height;
